--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -1,9 +1,26 @@
 <html>
   <body>
     <h1>You're using a layout</h1>
-    <p>
+    <p> <%= @request.query.inspect %>
       <h3> I'm a header</h3>
-      <p>Put things in the header</p>
+      <p>Put things in the header
+       <form method='post' action="<%= @request.path %>">
+        First name: <input type="text" name="first_name" placeholder='first name'/><br />
+        <input type="submit" value="Submit" />
+    </form>
+      <% if @request.query['first_name'] && !@request.query['first_name'].empty? %>
+    Hello there <%= @request.query['first_name'] %>
+  <% else %>
+    Enter thy name
+  <% end %>
+  <form>
+<input type="radio" name="sex" value="male" /> Male<br />
+<input type="radio" name="sex" value="female" /> Female
+</form><form name="input" action="html_form_action.asp" method="get">
+Username: <input type="text" name="user" />
+<input type="submit" value="Submit" />
+</form>
+    </p>
       <a href='me.html'>Me</a>
 
     </p>
